@@ -1,5 +1,9 @@
 ChangeLog
 
+* New $Hostname variable
+* New Message-ID header
+* Received header reformat
+* Helo variable default changed to $Hostname
 * Removed extra spaces in Content-Type definition (#667182)
 * Return-Path should be set to Sender when set
 * Adds Q or B encoding to headers when necessary
